file 1: added object reference in python and keywords desc

--- a/Readme.html
+++ b/Readme.html
@@ -701,7 +701,7 @@ hue-6-2: #e6c07b
 <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', system-ui, 'Ubuntu', 'Droid Sans', sans-serif;
-                font-size: 19px;
+                font-size: 17px;
                 line-height: 1.6;
             }
         </style>
@@ -824,6 +824,7 @@ hue-6-2: #e6c07b
 <li><a href="#table-of-contents">Table of Contents</a></li>
 <li><a href="#introduction">Introduction</a></li>
 <li><a href="#getting-started">Getting Started</a></li>
+<li><a href="#credit-where-its-due">Credit where its due</a></li>
 </ul>
 </li>
 </ul>
@@ -834,6 +835,18 @@ hue-6-2: #e6c07b
 <pre><code>bash
 git clone https://github.com/dr-bcyadav/Python-Deep-Dive.git
 </code></pre>
+<h2 id="credit-where-its-due">Credit where its due</h2>
+<p>Several codes or tutorials are inspired from <a href="https://www.geeksforgeeks.org"></a></p>
+<p>|---|---|
+|Category|	            Keywords|
+|Value Keywords|	        True, False, None
+|Operator Keywords|	    and, or, not, in, is|
+|Control Flow Keywords|	if, else, elif, for, while, break, continue, pass, try, except, finally, raise, assert|
+|Function and Class|	    def, return, lambda, yield, class|
+|Context Management|	    with, as|
+|Import and Module|	    import, from, as|
+|Scope and Namespace|	    global, nonlocal|
+|Async Programming|	    async, await|</p>
 
             
             
