--- a/Readme.html
+++ b/Readme.html
@@ -836,17 +836,7 @@ hue-6-2: #e6c07b
 git clone https://github.com/dr-bcyadav/Python-Deep-Dive.git
 </code></pre>
 <h2 id="credit-where-its-due">Credit where its due</h2>
-<p>Several codes or tutorials are inspired from <a href="https://www.geeksforgeeks.org"></a></p>
-<p>|---|---|
-|Category|	            Keywords|
-|Value Keywords|	        True, False, None
-|Operator Keywords|	    and, or, not, in, is|
-|Control Flow Keywords|	if, else, elif, for, while, break, continue, pass, try, except, finally, raise, assert|
-|Function and Class|	    def, return, lambda, yield, class|
-|Context Management|	    with, as|
-|Import and Module|	    import, from, as|
-|Scope and Namespace|	    global, nonlocal|
-|Async Programming|	    async, await|</p>
+<p>Several codes or tutorials are inspired from <a href="https://www.geeksforgeeks.org">geeksforgeeks.org</a>.</p>
 
             
             
