adeed logical, bitwise and assignment operators

--- a/Readme.html
+++ b/Readme.html
@@ -836,7 +836,7 @@ hue-6-2: #e6c07b
 git clone https://github.com/dr-bcyadav/Python-Deep-Dive.git
 </code></pre>
 <h2 id="credit-where-its-due">Credit where its due</h2>
-<p>Several codes or tutorials are inspired from <a href="https://www.geeksforgeeks.org">geeksforgeeks.org</a>.</p>
+<p><a href="https://www.geeksforgeeks.org">geeksforgeeks.org</a>.</p>
 
             
             
